Fix T55888: Eevee: crash when shadow cube size is > 512px

Note that this was only reported to happen on AMD GPU + windows.